[package]
name = "moabdb"
authors = ["Jackson Coxson <jkcoxson@gmail.com>"]
description = "A Rust client for the MoabDB database"
repository = "https://github.com/MoabDB/moabdb-rs"
keywords = ["moabdb", "database", "client", "stocks", "finance"]
homepage = "https://www.moabdb.com"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/moabdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.11.3" }
prost-types = { version = "0.11.2" }
base64 = { version = "0.13.1" }
polars = { version = "0.25.1", features = ["parquet"] }
ureq = { version = "2.5.0" }
chrono = { version = "0.4.23" }

[build-dependencies]
prost-build = { version = "0.11.3" }

